--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/firebase": "^10.1.2",
+    "firebase": "^9.21.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
