--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.17",
+    "@vueuse/core": "^10.2.0",
     "@vueuse/firebase": "^10.1.2",
     "firebase": "^9.21.0",
-    "@heroicons/vue": "^2.0.17",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
