--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
+    "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^10.2.0",
     "@vueuse/firebase": "^10.1.2",
     "firebase": "^9.21.0",
